--- a/IOperateIt/IOperateIt.csproj
+++ b/IOperateIt/IOperateIt.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Manager\EventBusManager.cs" />
+    <Compile Include="IOperateItOptions.cs" />
+    <Compile Include="Manager\OptionsManager.cs" />
     <Compile Include="Manager\VehicleHolder.cs" />
     <Compile Include="Tools\RoadSelectTool.cs" />
     <Compile Include="IOperateItLoading.cs" />
