Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,4 +1,4 @@
 files:
   - source: IOperateIt/Translations/en-EN.csv
-    translation: IOperateIt/Translations/%locale%.csv
+    translation: /**/IOperateIt/Translations/%locale%.csv
     scheme: 'identifier,source_or_translation,context'
