--- a/IOperateIt/IOperateIt.csproj
+++ b/IOperateIt/IOperateIt.csproj
@@ -27,35 +27,20 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\SteamLibrary\steamapps\common\Cities_Skylines\Cities_Data\Managed\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\Cities_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="ColossalManaged">
-      <HintPath>..\..\..\..\SteamLibrary\steamapps\common\Cities_Skylines\Cities_Data\Managed\ColossalManaged.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\Cities_Data\Managed\ColossalManaged.dll</HintPath>
     </Reference>
     <Reference Include="ICities">
-      <HintPath>..\..\..\..\SteamLibrary\steamapps\common\Cities_Skylines\Cities_Data\Managed\ICities.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\Cities_Data\Managed\ICities.dll</HintPath>
     </Reference>
     <Reference Include="UnifiedUILib">
-      <HintPath>..\..\..\..\SteamLibrary\steamapps\workshop\content\255710\2966990700\UnifiedUILib.dll</HintPath>
+      <HintPath>..\..\..\..\workshop\content\255710\2966990700\UnifiedUILib.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\SteamLibrary\steamapps\common\Cities_Skylines\Cities_Data\Managed\UnityEngine.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\Cities_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
-    <Target Name="DeployToModDirectory" AfterTargets="Build">
-	    <ItemGroup>
-		    <TranslationsCore Include="..\..\FPSCamera-Continued\AlgernonCommons\Translations\*.csv" />
-		    <SourceDir Include="$(TargetDir)\**\*.*" />
-	    </ItemGroup>
-	    <PropertyGroup>
-		    <DeployDir>$(LOCALAPPDATA)/Colossal Order/Cities_Skylines/Addons/Mods/$(ProjectName)/</DeployDir>
-	    </PropertyGroup>
-	    <Copy SourceFiles="@(SourceDir)" DestinationFolder="$(DeployDir)\%(RecursiveDir)" SkipUnchangedFiles="true" />
-	    <Copy SourceFiles="@(TranslationsCore)" DestinationFolder="$(DeployDir)\Translations\Core" SkipUnchangedFiles="true" />
-    </Target>
   <Import Project="..\..\FPSCamera-Continued\AlgernonCommons\AlgernonCommonsPatchingShared.projitems" Label="Shared" />
 </Project> 
