--- a/IOperateIt/IOperateIt.csproj
+++ b/IOperateIt/IOperateIt.csproj
@@ -18,9 +18,12 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\IOperateItIcon.png">
+    <Content Include="Resources\Textures\IOperateItIcon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+	<Content Include="Resources\Shaders\wireframeshader.asset">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</Content>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CitiesHarmony.API" Version="2.2.0" />
@@ -45,6 +48,9 @@
       <HintPath>..\..\Cities_Data\Managed\UnityEngine.dll</HintPath>
       <Private>false</Private>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Code\Tools\" />
   </ItemGroup>
   <Import Project="..\thirdparty\AlgernonCommons\AlgernonCommonsPatchingShared.projitems" Label="Shared" />
 </Project> 
