--- a/IOperateIt/IOperateIt.csproj
+++ b/IOperateIt/IOperateIt.csproj
@@ -9,45 +9,56 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <None Update="Translations\*.csv">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <Content Include="..\thirdparty\AlgernonCommons\Translations\*.csv">
-      <Link>\Translations\Core\%(Filename)%(Extension)</Link>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <ProjectReference Include="..\..\FPSCamera-Continued\FPSCamera.API\FPSCamera.API.csproj" />
+    <ProjectReference Include="..\..\FPSCamera-Continued\FPSCamera\FPSCamera.csproj">
+      <Aliases>FPC</Aliases>
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\Textures\IOperateItIcon.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-	<Content Include="Resources\Shaders\wireframeshader.asset">
+    <None Update="Translations\*.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Shaders\wireframeshader.asset">
 		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	</Content>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="CitiesHarmony.API" Version="2.2.0" />
+	<None Update="Resources\Textures\IOperateItIcon.png">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</None>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\Cities_Data\Managed\Assembly-CSharp.dll</HintPath>
-      <Private>false</Private>
+      <HintPath>..\..\..\..\SteamLibrary\steamapps\common\Cities_Skylines\Cities_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="ColossalManaged">
-      <HintPath>..\..\Cities_Data\Managed\ColossalManaged.dll</HintPath>
-      <Private>false</Private>
+      <HintPath>..\..\..\..\SteamLibrary\steamapps\common\Cities_Skylines\Cities_Data\Managed\ColossalManaged.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="ICities">
-      <HintPath>..\..\Cities_Data\Managed\ICities.dll</HintPath>
-      <Private>false</Private>
+      <HintPath>..\..\..\..\SteamLibrary\steamapps\common\Cities_Skylines\Cities_Data\Managed\ICities.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="UnifiedUILib">
-      <HintPath>..\..\..\..\workshop\content\255710\2966990700\UnifiedUILib.dll</HintPath>
+      <HintPath>..\..\..\..\SteamLibrary\steamapps\workshop\content\255710\2966990700\UnifiedUILib.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine">
-      <HintPath>..\..\Cities_Data\Managed\UnityEngine.dll</HintPath>
-      <Private>false</Private>
+      <HintPath>..\..\..\..\SteamLibrary\steamapps\common\Cities_Skylines\Cities_Data\Managed\UnityEngine.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
-  <Import Project="..\thirdparty\AlgernonCommons\AlgernonCommonsPatchingShared.projitems" Label="Shared" />
+    <Target Name="DeployToModDirectory" AfterTargets="Build">
+	    <ItemGroup>
+		    <TranslationsCore Include="..\..\FPSCamera-Continued\AlgernonCommons\Translations\*.csv" />
+		    <SourceDir Include="$(TargetDir)\**\*.*" />
+	    </ItemGroup>
+	    <PropertyGroup>
+		    <DeployDir>$(LOCALAPPDATA)/Colossal Order/Cities_Skylines/Addons/Mods/$(ProjectName)/</DeployDir>
+	    </PropertyGroup>
+	    <Copy SourceFiles="@(SourceDir)" DestinationFolder="$(DeployDir)\%(RecursiveDir)" SkipUnchangedFiles="true" />
+	    <Copy SourceFiles="@(TranslationsCore)" DestinationFolder="$(DeployDir)\Translations\Core" SkipUnchangedFiles="true" />
+    </Target>
+  <Import Project="..\..\FPSCamera-Continued\AlgernonCommons\AlgernonCommonsPatchingShared.projitems" Label="Shared" />
 </Project> 
